Murphy System/outputs/workspace_output_1769373684_2868.txt
  File "/workspace/add_librarian_endpoint.py", line 69
    """Process any user input with intent classification and command mapping."""
       ^^^^^^^
SyntaxError: invalid syntax
